@@ -7,3 +7,4 @@ xml:
     product.xml
     category.xml
     uom.xml
+    configuration.xml
