@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form string="Party Configuration">
+    <label name="default_cost_price_method"/>
+    <field name="default_cost_price_method"/>
+</form>
